--- a/style.css
+++ b/style.css
@@ -1,24 +1,30 @@
 /*
-Theme Name: Grain
-Theme URI: http://mac.defx.de/grain-theme
-Description: <p>A Photoblog Theme for Wordpress</p><p>This Theme needs the <a href="http://johannes.jarolim.com/blog/wordpress/yet-another-photoblog">Yet Another Photoblog</a> plugin by J. P. Jarolim</p>
-Version: 0.2
-Author: Markus Mayer
-Author URI: http://www.defx.de/
 
-	Grain 0.2
-	 http://mac.defx.de/grain-theme/
+    Theme Name: Grain
+    Theme URI: http://wp-grain.wiki.sourceforge.net/
+    Description: A Photoblog Theme for Wordpress using the <a target="_blank" href="http://johannes.jarolim.com/blog/wordpress/yet-another-photoblog">Yet Another Photoblog</a> plugin.
+    Author: Markus Mayer
+    Author URI: http://mac.defx.de/
+    Version: 0.2.2
 
-	This theme was designed and built by Markus Mayer,
-	whose blog you will find at http://mac.defx.de/
+    <!----------------------------------------------------------------------------------------
 
-	The CSS, XHTML and design is released under GPL:
-	http://www.opensource.org/licenses/gpl-license.php
+    Grain Theme for WordPress is free software: you can redistribute it 
+    and/or modify it under the terms of the GNU General Public License 
+    as published by the Free Software Foundation, either version 3 of 
+    the License, or (at your option) any later version.
+    
+    Grain Theme for WordPress is distributed in the hope that it will 
+    be useful, but WITHOUT ANY WARRANTY; without even the implied warranty 
+    of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+    
+    You should have received a copy of the GNU General Public License
+    along with Grain Theme for WordPress. 	If not, see <http://www.gnu.org/licenses/>.
+	
+    -------------------------------------------------------------------------------------- -->
+    File version: $Id$	
 
-*/
-
-/*
-	Template Name: Stylesheet: Structure
 */
 
 html {
