--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     Description: A Photoblog Theme for Wordpress using the <a target="_blank" href="http://johannes.jarolim.com/blog/wordpress/yet-another-photoblog">Yet Another Photoblog</a> plugin.
     Author: Markus Mayer
     Author URI: http://mac.defx.de/
-    Version: 0.2.2
+    Version: 0.2.3 development
 
     <!----------------------------------------------------------------------------------------
 
