--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body {
 	height: 50px;
 	display: block;
 	
-	background: rgb(37, 37, 37) url(images/grid2.png);
+	background: rgb(37, 37, 37) url(images/grid2.gif);
 	
 	/* allow positioning; is itself relative to #page  */
 	position: relative;
@@ -291,7 +291,7 @@ body {
 /* Footer */
 
 #footer {
-	background: rgb(37, 37, 37) url(images/grid2.png);
+	background: rgb(37, 37, 37) url(images/grid2.gif);
 	border: none;
 	height: 105px;
 	
@@ -1323,7 +1323,7 @@ a img {
 	border: 1px solid rgb(255, 102, 0);
 	border-top: none;
 	*/
-	background: dimgray url(images/grid.png);
+	background: dimgray url(images/grid.gif);
 	color: white;
 	opacity: 0.8;
 	-moz-opacity: 0.8;
