--- a/admin/admin.css
+++ b/admin/admin.css
@@ -19,12 +19,19 @@
 	text-align: left;
 }
 
-#nonJsForm label {
-	padding-top: 6px;
+#nonJsForm label.leftbound {
+	/* padding-top: 6px; */
 	padding-right: 5px;
 	float: left;
 	width: 200px;
 	text-align: right;
+}
+
+#nonJsForm label.checkbox_text {
+	padding-top: none;
+	padding-right: none;
+	width: auto;
+	text-align: left;
 }
 
 #nonJsForm input,
@@ -39,12 +46,16 @@
 
 .input_pad {
 	padding-left: 205px;
-	margin-top: -10px;
 	padding-top: 0;
+	margin-top: 5px;
 }
 
-#nonJsForm textarea.license-code {
+#nonJsForm textarea, #nonJsForm input {
 	font-family: "Courier New", Courier, monospace;
+}
+
+textarea {
+	width: 720px;
 }
 
 .defbutton {
@@ -94,4 +105,64 @@ td.key {
 td.value {
 	padding-left: 2px;
 	padding-right: 2px;
+}
+
+input {
+	margin-right: 10px;	
+}
+
+input.checkbox {
+	margin-right: 5px;	
+}
+
+input.longline {
+	width: 400px;	
+}
+
+input.shortline {
+	width: 150px;	
+}
+
+span.quickinfo {
+	color: gray;	
+}
+
+div.description {
+	margin-bottom: 10px;
+}
+
+div.infoline {
+	margin-bottom: 10px;
+	margin-top: 10px;
+}
+
+div.optionline {
+	margin-bottom: 5px;	
+}
+
+fieldset {
+	border: none;
+	margin-top: 10px;
+}
+
+fieldset legend {
+	font-size: 1.25em;
+	border-bottom: 1px dotted silver;
+}
+
+#atom_feed_line {
+	padding-top: 10px;	
+}
+
+#atom_feed_label {
+	background-image: url(../images/atom_gray.gif);
+	background-repeat: no-repeat;
+	background-position: 80px 0px;
+	height: 40px;
+	margin-top: -10px;
+	padding-top: 10px;
+}
+
+input.pixelbox {
+	width: 50px;
 }
