- added gravatar.png; This is not the default image yet, but will be used as such in future - added "gravatar" class to gravatar images - set "no border" style for gravatar images
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@25 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/style.css
+++ b/style.css
@@ -1610,3 +1610,7 @@ td.exif-value {
 #photo-nav-right a:hover {
 	background: url(images/go_right.gif) 50% right no-repeat;
 }
+
+img.gravatar {
+   border: 0px !important;
+}
