- fixed an error in the combobox function (admin/menu.php) that appeded a quote to the values - added is_private function - changed the behavior so that private posts are skipped - function for "not found" etc. error messages, applied additional div
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@30 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/style.css
+++ b/style.css
@@ -290,6 +290,11 @@ body {
 
 /* Footer */
 
+#footer-complete {
+	top: 20px;
+	position: relative;	
+}
+
 #footer {
 	background: rgb(37, 37, 37) url(images/grid2.gif);
 	height: 90px;
@@ -352,9 +357,6 @@ body {
 	}	
 
 /* Content */
-
-#content_area {
-	}
 
 #content-page,
 #content-archives,
@@ -652,10 +654,6 @@ h1 {
 	padding-top: 0px;
 	margin: 0;
 	margin-top: -2px;
-	}
-
-h2 {
-	margin: 30px 0 0;
 	}
 
 h2.pagetitle {
