- fixed session deregistration of "from popup" flag (allowed OTI to be displayed always) - changed popup referer check to session check, since some browsers don't send referers - grain_can_comment() returns FALSE now if there is no post - fixed error that showed "there are no pages" error when a wrong page was given - changed "<strong>" to "<span class=unapproved-comment>" on unapproved comments for moderators - added is() function as an alias for getYesNo() on GrainOptions
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@33 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/style.css
+++ b/style.css
@@ -265,6 +265,11 @@ body {
 	z-index: 9;
 	}	
 
+#commentspopup #header-top {
+	display: none;
+	visibility: hidden;
+	}
+
 #header-bottom {
 	background: url(images/arc-lt.gif) no-repeat left bottom;
 	height: 20px;
@@ -1605,4 +1610,8 @@ td.exif-value {
 
 img.gravatar {
    border: 0px !important;
+}
+
+span.unapproved-comment {
+	font-weight: bold;	
 }
