fix: comment rss feed now points to the current page
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@43 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/style.css
+++ b/style.css
@@ -1621,3 +1621,22 @@ span.unapproved-comment {
 	font-style: italic;
 	display: block;
 }
+
+#comment-frame-body #trackback-info {
+	color: dimgray;
+}
+
+#comment-frame-body #trackback-info .trackback-url {
+	display: block;
+	font-style: italic;
+}
+
+#comment-frame-body  #comment-rss-feed-container {
+	margin-bottom: 5px;
+}
+
+#comment-frame-body  #comment-rss-feed-container .linktext {
+	/* if you want to show the "comment rss feed" text, comment out the following two lines */
+	display: none; 
+	visibility: hidden;
+}
