- added tags to theme decription
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@50 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     Author: Markus Mayer
     Author URI: http://mac.defx.de/
     Version: 0.3 development
+	Tags: dark, photoblog, fixed width, widgets
 
     <!----------------------------------------------------------------------------------------
 
