Grain 0.3 dev is working and can be considered beta
- moved index.php logic to func/content.php
- posts without an image are now shown in archives and the mosaic.php
- added NOINDEX meta to the comment popup
- added "navigation-bottom" and "navigation-top" IDs to the navigation links on the archive and mosaic
- renamed the "show comments"/"hide comments" texts
- changed some option defaults
- added a function to inject a error combined with the search form
- fixed some errors in header.menu.php that prevented about/mosaic/newest links to show up on pages
- added some localizations to page.php
- changed some basic styles, e.g the calendar

git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@52 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/admin/admin.css
+++ b/admin/admin.css
@@ -142,7 +142,11 @@ div.optionline {
 
 fieldset {
 	border: none;
+	border-left: 1px dashed silver;
+	border-bottom: 1px dashed silver;
 	margin-top: 10px;
+	margin-left: -2px;
+	padding-left: 20px;
 }
 
 fieldset legend {
