- added automatic locale switching - changed exif display block to overflow: hidden - exif block will now be hidden completely if there is no data to display
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@67 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/style.css
+++ b/style.css
@@ -1225,12 +1225,23 @@ h2#comments-headline {
 	margin: 0 auto;
 }
 
+
+#exif-frame {
+	overflow: hidden;
+}
+
 #info-frame #exif-frame {
 	padding: 0;
 	margin-bottom: 10px;
 	float: right;
-	width: 300px;
+	width: 350px;
 	}
+
+#exif caption {
+	text-align: left;
+	color: gray;
+	padding-bottom: 2px;
+}
 	
 #commentspopup #exif-frame {
 	padding: 0;
