the info panel is now shortened by CSS if no text and no exif is displayed added the contentless, no-content/has-content, no-exif/has-exif classes to #info-frame
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@89 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/style.css
+++ b/style.css
@@ -1222,10 +1222,26 @@ h2#comments-headline {
 	margin: 10px 0px;
 }
 
-#info-frame #content.exif {
+#info-frame.contentless h2 {
+	margin-bottom: 0;
 }
 
-#info-frame #content.no-exif {
+#info-frame.contentless #exif-frame,
+#info-frame.contentless #infotext-frame {
+	display: none;
+	visibility: hidden;
+}
+
+#info-frame.contentless #meta {
+	border-top: none;
+	padding-top: 0;
+	margin-top: 0;
+}
+
+#info-frame.exif {
+}
+
+#info-frame.no-exif {
 }
 
 #info-frame #comment-area {
