added yapb version response header added "grain-sidebar" class to sidebars tweaked default display of Widgets so that they appear less ugly at a first glance
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@91 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/style.css
+++ b/style.css
@@ -1758,3 +1758,25 @@ span.menu-delimiter {
 	background-repeat: no-repeat;
 	background-position: right center;
 }
+
+div.grain-sidebar ul {
+	list-style-type: none;
+	list-style-position: inside;
+}
+
+div.grain-sidebar ul li li {
+	display: inline;
+}
+
+div.grain-sidebar ul li h2 {
+	display: none;
+}
+
+div.grain-sidebar ul li li:before {
+	content: "\00BB \0020";
+}
+
+div.grain-sidebar #yapb-widget img {
+	width: 50px;
+	height: 50px;
+}
