--- a/style.css
+++ b/style.css
@@ -1780,3 +1780,8 @@ div.grain-sidebar #yapb-widget img {
 	width: 50px;
 	height: 50px;
 }
+
+.unapproved_count {
+	/*color: gray;*/
+	font-size: x-small;
+}
