- added EXIF data filtering - added option to render EXIF data inline instead to a table
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@98 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/admin/admin.css
+++ b/admin/admin.css
@@ -170,3 +170,12 @@ fieldset legend {
 input.pixelbox {
 	width: 50px;
 }
+
+div.spacer {
+	padding-top: 10px;
+	margin-top: 10px;
+	border-top: 1px dashed #F0F0F0;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+}
