added space between reflected image and photo
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@104 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/style.css
+++ b/style.css
@@ -1892,3 +1892,8 @@ div.year h2 {
 div.year {
 	border-bottom: 1px solid white;
 }
+
+
+#photo-frame canvas {
+	margin-top: 5px; /* <-- this is the offset of the reflected image to it's original */
+}
