--- a/admin/admin.css
+++ b/admin/admin.css
@@ -179,3 +179,24 @@ div.spacer {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+div.ajaxloader {
+	display: inline;	
+	margin-left: 10px;
+	height: 16px;
+	position: relative;
+}
+
+div.ajaxloader img {
+	vertical-align: center;
+	top: 2px;
+	position: relative;
+}
+
+div.ajaxloader span.loading {
+	margin-left: 5px;
+}
+
+input.refreshbutton {
+	font-size: x-small;
+}
