fixed the_post() error in Media RSS function that limited the number of posts to WordPress' default
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@136 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/style.css
+++ b/style.css
@@ -1402,6 +1402,8 @@ a img {
 	display: block;
 	margin: 0 auto;
 	padding-bottom: 20px;
+	position: relative;
+	z-index: 20;
 	}
 
 .tooltip-title,
