- changed archiving scripts not to include moonsugar.base.php - added development version warning to the landing page - added development trigger filename to a define
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@161 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/admin/admin.css
+++ b/admin/admin.css
@@ -203,3 +203,26 @@ input.refreshbutton {
 	text-align: center;
 	vertical-align: middle;
 }
+
+
+.information {
+	background-color: #fff0c0;
+	border-color: #c00;
+	border-width: 1px;
+	border-style: solid;
+	padding: 0px 10px;
+}
+
+.information a {
+	color: #c00;
+}
+
+#dev-filename {
+	margin-left: 10px;
+	position: relative;
+	top: 5px;
+	padding: 2px;
+	border: 1px solid silver;
+	background: white;
+	width: auto;
+}
