- tuned development version warning - now defining GRAIN_LOGGING_DISABLED_THE_HARD_WAY if the logging library is missing
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@163 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/admin/admin.css
+++ b/admin/admin.css
@@ -226,3 +226,18 @@ input.refreshbutton {
 	background: white;
 	width: auto;
 }
+
+#logging-state .enabled,
+#logging-state .disabled {
+	border-bottom: 1px solid;
+}
+
+#logging-state .enabled {
+	/*color: #cc0000; */
+	font-weight: bold;
+}
+
+p.current {
+	padding-bottom: 10px;
+	border-bottom: 1px dashed silver;
+}
