--- a/admin/admin.css
+++ b/admin/admin.css
@@ -241,3 +241,52 @@ p.current {
 	padding-bottom: 10px;
 	border-bottom: 1px dashed silver;
 }
+
+#grain-version, #yapb-version {
+	font-family: monospace;
+}
+
+div.grain-options-block {
+	margin: 5px;
+	border: 1px solid #f0f0f0;
+	position: relative;
+	/*height: 80px;*/
+	/*background: url(../images/grid3.png);
+	color: white;*/
+}
+
+div.grain-options-block div {
+	padding: 5px;
+	/*position: relative;*/
+}
+
+div.grain-options-block div.option-name {
+	position: relative;
+	top: 0px;
+	left: 0px;
+	width: 220px;
+	height: 40px;
+	/*background: #f0f0ff;*/
+	font-size: larger;
+	padding-left: 10px;
+	padding-right: 5px;
+	/*border-right: 1px solid silver;*/
+	/*background: url(../images/grid.gif);*/
+}
+
+div.grain-options-block div.option-description {
+	/*width: 500px;*/
+	position: absolute;
+	left: 240px;
+	top: 0px;
+	height: 50px;
+	padding-right: 10px;
+}
+
+div#grain-options-info-inner {
+	padding: 10px 0px;
+}
+
+div#happy-photoblogging {
+	padding-bottom: 20px;
+}
