--- a/admin/admin.css
+++ b/admin/admin.css
@@ -290,3 +290,7 @@ div#grain-options-info-inner {
 div#happy-photoblogging {
 	padding-bottom: 20px;
 }
+
+#logging-state-text {
+	cursor: pointer;
+}
